# CS-OOP-excercises

CARGO/: CMakeLists.txt
CARGO/src/: Alcohol.cpp  DryFruit.cpp  Item.cpp
Coordinates/: CMakeLists.txt  Coordinates-UT.cpp  Coordinates.cpp  Coordinates.hpp
OOP-smaller-tasks/: CMakeLists.txt
OOP-smaller-tasks/src/: Alcohol.hpp  Cargo.hpp  CargoTest.cpp  DryFruit.hpp  Fruit.cpp  Fruit.hpp  Item.cpp  Item.hpp  Ship.cpp  Ship.hpp  ShipTest.cpp
basic-first-task-ox07/: .gitignore  CMakeLists.txt  Ship.hpp  main.cpp  test.cpp
basic-first-task-ox07/src/: Ship.cpp  Ship.hpp  main.cpp  test.cpp
basic-tasks/: CMakeLists.txt
basic-tasks/src/: Alcohol.cpp  Alcohol.hpp  Cargo.cpp  Cargo.hpp  CargoTest.cpp  Fruit.cpp  Fruit.hpp  Item.hpp  Ship.cpp  Ship.hpp  ShipTest.cpp  main.cpp  test.cpp
